--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -6,7 +6,7 @@
     flex: 1 1 auto;
   }
 
-  .example-container {
+  .menu-container {
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -37,3 +37,10 @@
        `<body>` to be our scrolling element for mobile layouts. */
     flex: 1 0 auto;
   }
+  
+  .mat-drawer { 
+    width:70%;
+    background-color: #3f51b5;
+    color: white;
+  } 
+
