--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
-
-
-<div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
-    <mat-toolbar color="primary" class="example-toolbar">
+<div class="esns_header">
+  <!-- side nav for mobile devices -->
+  <div class="menu-container" [class.example-is-mobile]="mobileQuery.matches">
+    <mat-toolbar color="primary" class="example-toolbar" style="height:60px;">
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
       <h1 class="example-app-name">ESNS</h1>
     </mat-toolbar>
@@ -9,15 +9,16 @@
     <mat-sidenav-container class="example-sidenav-container"
                            [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
-        <mat-nav-list>
+                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" style="">
+        <mat-nav-list style="height:60px;">
           <a mat-list-item routerLink="item.link" *ngFor="let item of getMenu()">{{item.title}}</a>
         </mat-nav-list>
       </mat-sidenav>
     </mat-sidenav-container>
   </div>
   
-  <div class="example-container" [class.example-is-mobile]="!mobileQuery.matches">
+  <!-- top nav for desktop devices -->
+  <div class="menu-container" [class.example-is-mobile]="!mobileQuery.matches">
     <mat-toolbar color="primary">
       <mat-toolbar-row>
         <span>ESNS</span>
@@ -27,3 +28,6 @@
       </mat-toolbar>
       
   </div>
+</div>
+
+
