--- a/src/app/components/intro/intro.component.css
+++ b/src/app/components/intro/intro.component.css
@@ -1,7 +1,5 @@
-.example-icon {
-    padding: 0 14px;
-  }
-  
-  .example-spacer {
-    flex: 1 1 auto;
-  }
+.intro {
+    position: relative;
+    background: url("https://mdbootstrap.com/img/Photos/Others/images/59.jpg")no-repeat center center;
+    background-size: cover;
+}
