--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
+html,body {
+    height:100%;
+}
+div.esns_header {
+    height:100%;
+    width:100%;
+    position:absolute;
+    left:0px;
+    top:0px;
+}
+div.esns_body {
+    width:100%;
+    position:relative;
+    top:100%;
+}
