--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -1,6 +1,22 @@
 <!--Intro Section-->
-<div class="intro">
-    ESNS
-</div>
 
-asdad
+<section class="intro">
+    <div class="full-bg">
+            <div class="center">
+                <div class="title">
+                        ESNS
+                </div>
+                <div class="subtitle">
+                    Emergency School Notification System
+                </div>
+                
+                <div class="report-btn-spacer">
+                </div>
+                <!--div>
+                        <button mat-raised-button color="warn" class="large-report-btn">Make Report</button>
+                </div-->
+                
+            </div>
+
+    </div>
+</section>
