--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,33 +1,44 @@
 <div class="esns_header">
   <!-- side nav for mobile devices -->
-  <div class="menu-container" [class.example-is-mobile]="mobileQuery.matches">
-    <mat-toolbar color="primary" class="example-toolbar" style="height:60px;">
-      <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-      <h1 class="example-app-name">ESNS</h1>
-    </mat-toolbar>
-  
-    <mat-sidenav-container class="example-sidenav-container"
-                           [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-      <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" style="">
-        <mat-nav-list style="height:60px;">
-          <a mat-list-item routerLink="item.link" *ngFor="let item of getMenu()">{{item.title}}</a>
-        </mat-nav-list>
-      </mat-sidenav>
-    </mat-sidenav-container>
+  <div class="mobile-menu">
+
+
+    <!-- #menu="matMenu"
+      <a mat-list-item routerLink="item.link" *ngFor="let item of getMenu()">{{item.title}}</a>
+    -->
+
+    <mat-accordion class="mobile-menu">
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+                {{panelOpenState ? 'Close' : 'Open'}} Menu
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <div class="expansion-panels" *ngFor="let item of getMenu()"><a href="{{item.link}}">{{item.title}}</a></div>
+      </mat-expansion-panel>
+    </mat-accordion>
+   
+    
+     
   </div>
   
+  <div class="desktop-menu">
   <!-- top nav for desktop devices -->
-  <div class="menu-container" [class.example-is-mobile]="!mobileQuery.matches">
-    <mat-toolbar color="primary">
-      <mat-toolbar-row>
-        <span>ESNS</span>
-        <span class="example-spacer"></span>
-        <button mat-button *ngFor="let item of getMenu()">{{item.title}}</button>
-      </mat-toolbar-row>
-      </mat-toolbar>
-      
+    <div class="menu-container desktop-menu">
+        <mat-toolbar color="primary">
+          <mat-toolbar-row>
+            <span>ESNS</span>
+            <span class="example-spacer"></span>
+            <button mat-button *ngFor="let item of getMenu()">{{item.title}}</button>
+          </mat-toolbar-row>
+        </mat-toolbar>
+    </div>
   </div>
+    
+  
+  <!-- always there report button -->
+  <button mat-raised-button color="warn" class="reportBtn">Report</button>
+  
 </div>
 
 
