--- a/src/app/components/intro/intro.component.css
+++ b/src/app/components/intro/intro.component.css
@@ -1,5 +1,60 @@
 .intro {
     position: relative;
-    background: url("https://mdbootstrap.com/img/Photos/Others/images/59.jpg")no-repeat center center;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("https://i.imgur.com/sD1udLh.jpg")no-repeat center center;
     background-size: cover;
+    height: 100%;
+    overflow: hidden;
 }
+
+.full-bg {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    width: 60%;
+    /*border: 3px solid #73AD21;*/
+    text-align: center;
+    color: white;
+}
+
+.title {
+    text-shadow: 2px 2px black;
+}
+
+.subtitle {
+    font-size: 24px;
+    font-weight: 300;
+    text-shadow: 1px 1px black;
+}
+
+.report-btn-spacer {
+    height: 120px;
+}
+
+.large-report-btn {
+    width: 220px;
+    height: 100px;
+
+    font-size: 30px;
+}
+
+@media (max-width: 650px) {
+    .title {
+        font-size: 100px;
+        font-weight:  500;
+    }
+}
+  
+@media (min-width: 650px) {
+    .title {
+        font-size: 142px;
+        font-weight:  500;
+    }
+}
+  
