Building out the home page undernearth the intro section

--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -1,22 +1,142 @@
 <!--Intro Section-->
 
 <section class="intro">
-    <div class="full-bg">
-            <div class="center">
-                <div class="title">
-                        ESNS
-                </div>
-                <div class="subtitle">
-                    Emergency School Notification System
-                </div>
-                
-                <div class="report-btn-spacer">
-                </div>
-                <!--div>
-                        <button mat-raised-button color="warn" class="large-report-btn">Make Report</button>
-                </div-->
-                
-            </div>
+	<div class="full-bg">
+			<div class="center">
+				<div class="title">
+						ESNS
+				</div>
+				<div class="subtitle">
+					Emergency School Notification System
+				</div>
+				
+				<div class="report-btn-spacer">
+				</div>
+				<!--div>
+						<button mat-raised-button color="warn" class="large-report-btn">Make Report</button>
+				</div-->
+				
+			</div>
 
-    </div>
+	</div>
 </section>
+
+<br><br><br>
+<br><br><br>
+<div class="main">
+		<div class="fancy-line">
+			<span class="bold">
+				About Us
+			</span>
+		</div>
+		<div class="plain-text">
+				ESNS is meant to be used by students and administrators alike to have the 
+				ability to report and track a live shooter. It is also meant to be able to 
+				receive live updates and allow special administration. <br><br>
+				Every user must give basic information for student and admin such as: name, 
+				school e-mail, phone number. This will allow the website to push notifications. 
+				The server and database must be able to pass location information.
+		</div>
+
+		<div class="fancy-line">
+			<span class="bold">
+				Features
+			</span>
+		</div>
+
+		<div class="plain-text">
+			<div class="sidebyside">
+				<mat-card class="example-card">
+					<mat-card-header>
+					  <div mat-card-avatar class="example-header-image"></div>
+					  <mat-card-title>Shiba Inu</mat-card-title>
+					  <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					  <p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					  </p>
+					</mat-card-content>
+					<mat-card-actions>
+					  <button mat-button>LIKE</button>
+					  <button mat-button>SHARE</button>
+					</mat-card-actions>
+				  </mat-card>
+			</div>
+			<div class="sidebyside">
+				<mat-card class="example-card">
+					<mat-card-header>
+					  <div mat-card-avatar class="example-header-image"></div>
+					  <mat-card-title>Shiba Inu</mat-card-title>
+					  <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="assets/images/tracker.jpg">
+					<mat-card-content>
+					  <p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					  </p>
+					</mat-card-content>
+					<mat-card-actions>
+					  <button mat-button>LIKE</button>
+					  <button mat-button>SHARE</button>
+					</mat-card-actions>
+				  </mat-card>
+			</div>
+			<div class="sidebyside">
+				<mat-card class="example-card">
+					<mat-card-header>
+					  <div mat-card-avatar class="example-header-image"></div>
+					  <mat-card-title>Shiba Inu</mat-card-title>
+					  <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					  <p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					  </p>
+					</mat-card-content>
+					<mat-card-actions>
+					  <button mat-button>LIKE</button>
+					  <button mat-button>SHARE</button>
+					</mat-card-actions>
+				  </mat-card>
+			</div>
+			<div class="sidebyside">
+				<mat-card class="example-card">
+					<mat-card-header>
+					  <div mat-card-avatar class="example-header-image"></div>
+					  <mat-card-title>Shiba Inu</mat-card-title>
+					  <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+					</mat-card-header>
+					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+					<mat-card-content>
+					  <p>
+						The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+						A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+						bred for hunting.
+					  </p>
+					</mat-card-content>
+					<mat-card-actions>
+					  <button mat-button>LIKE</button>
+					  <button mat-button>SHARE</button>
+					</mat-card-actions>
+				  </mat-card>
+			</div>
+		</div>
+		
+		
+
+
+</div>
+
+
+<br><br><br>
+<br><br><br>
+
