--- a/src/app/components/intro/intro.component.css
+++ b/src/app/components/intro/intro.component.css
@@ -40,7 +40,6 @@
 .large-report-btn {
     width: 220px;
     height: 100px;
-
     font-size: 30px;
 }
 
@@ -55,6 +54,70 @@
     .title {
         font-size: 142px;
         font-weight:  500;
+    }
+}
+  
+.main {
+    margin: auto;
+    width: 80%;
+    padding: 10px;
+    text-align: center;
+}
+
+.fancy-line {
+    width: 100%; 
+    border-bottom: 2px solid #a7a7a7; 
+    text-align: center
+}
+
+.bold {
+    font-size: 64px;
+    font-weight: 700;
+    color: #3f51b5;
+    background: white;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.plain-text {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    color: #424242;
+	margin-bottom: 150px;
+	display: block;
+}
+
+
+.sidebyside {
+	display: inline-block;
+	width: 45%;
+	padding: 10px;
+}
+
+/* mobile view */
+@media (max-width: 650px) {
+    .bold {
+        font-size: 32px;
+    }
+    .fancy-line {
+        height: 16px; 
+    }
+    .plain-text {
+        margin-top: 80px;
+    }
+  }
+  
+/* desktop view */
+@media (min-width: 650px) {
+    .bold {
+        font-size: 48px;
+    }
+    .fancy-line {
+        height: 24px; 
+    }
+    .plain-text {
+        margin-top: 100px;
     }
 }
   
