--- a/src/app/components/intro/intro.component.css
+++ b/src/app/components/intro/intro.component.css
@@ -10,7 +10,8 @@
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+	overflow: hidden;
+	padding-top: 20%;
 }
 
 .center {
@@ -86,13 +87,42 @@
     color: #424242;
 	margin-bottom: 150px;
 	display: block;
+	width: 100%;
+}
+
+.card-container {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    color: #424242;
+	display: block;
+	width: 100%;
 }
 
 
-.sidebyside {
-	display: inline-block;
-	width: 45%;
-	padding: 10px;
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+	border-radius: 5px;
+	float: left;
+	height: 600px;
+}
+
+.card img {
+	height: auto;
+	width:100%;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+img {
+    border-radius: 5px 5px 0 0;
+}
+
+.container {
+    padding: 2px 16px;
 }
 
 /* mobile view */
@@ -105,9 +135,19 @@
     }
     .plain-text {
         margin-top: 80px;
-    }
-  }
+	}
+	.card {
+		width: 94%;
+		margin-left: 3%;
+		margin-right: 3%;
+		margin-bottom: 50px;
+		float: none;
+		height: auto;
+		display: inline-block;
+	}
+}
   
+
 /* desktop view */
 @media (min-width: 650px) {
     .bold {
@@ -118,6 +158,14 @@
     }
     .plain-text {
         margin-top: 100px;
-    }
+	}
+	.card {
+		width: 44%;
+		margin-left: 3%;
+		margin-right: 3%;
+		margin-bottom: 50px;
+		float: left;
+	}
 }
   
+
