Too much stuff to list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<app-header></app-header>
-
-<app-intro></app-intro>
-
-<app-footer></app-footer>
+<!-- 
+	Using routes defined in app.module.ts > const appRoutes 
+-->
+<router-outlet></router-outlet>
