--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -37,8 +37,10 @@
     
   
   <!-- always there report button -->
-  <button mat-raised-button color="warn" class="reportBtn">Report</button>
-  
+  <a href="/report">
+    <button mat-raised-button color="warn" class="reportBtn">Report</button>
+  </a>
 </div>
 
-
+<div class="header-spacer"></div>
+<div style="clear: both;"></div>
