--- a/src/app/components/intro/intro.component.css
+++ b/src/app/components/intro/intro.component.css
@@ -2,6 +2,7 @@
     position: relative;
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("https://i.imgur.com/sD1udLh.jpg")no-repeat center center;
     background-size: cover;
+    background-attachment: fixed;
     height: 100%;
     overflow: hidden;
 }
@@ -17,7 +18,6 @@
 .center {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
     width: 60%;
     /*border: 3px solid #73AD21;*/
     text-align: center;
@@ -90,40 +90,11 @@
 	width: 100%;
 }
 
-.card-container {
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 24px;
-    color: #424242;
-	display: block;
-	width: 100%;
-}
-
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-	border-radius: 5px;
-	float: left;
-	height: 600px;
-}
-
-.card img {
-	height: auto;
-	width:100%;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
 
 img {
     border-radius: 5px 5px 0 0;
 }
 
-.container {
-    padding: 2px 16px;
-}
 
 /* mobile view */
 @media (max-width: 650px) {
@@ -135,15 +106,6 @@ img {
     }
     .plain-text {
         margin-top: 80px;
-	}
-	.card {
-		width: 94%;
-		margin-left: 3%;
-		margin-right: 3%;
-		margin-bottom: 50px;
-		float: none;
-		height: auto;
-		display: inline-block;
 	}
 }
   
@@ -158,13 +120,6 @@ img {
     }
     .plain-text {
         margin-top: 100px;
-	}
-	.card {
-		width: 44%;
-		margin-left: 3%;
-		margin-right: 3%;
-		margin-bottom: 50px;
-		float: left;
 	}
 }
   
