--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -1,8 +1,4 @@
 <!--Intro Section-->
-
-
-
-
 <section class="intro">
 	<div class="full-bg">
 		<div class="center">
@@ -49,58 +45,27 @@
 				Features
 			</span>
 		</div>
-		<br><br><br><br><br>
-		<div class="card-container">
-				<div class="card">
-						<img src="http://kingstonjournal.com/wp-content/uploads/2013/01/swat-468x312.png" alt="Avatar">
-						<div class="container">
-						<h4><b>Police Assist</b></h4> 
-						<p>
-							If the student is safe, our application provides the ability for students to report where an active
-							shooter is.  This information is then passed onto police to help them locate the suspects as 
-							quickly as possible.
-						</p>
-						</div>
-					</div>
-				
-				
-					<div class="card">
-						<img src="http://i.dailymail.co.uk/i/pix/2015/06/26/10/29FDE98600000578-3140187-Apple_s_Find_My_Friends_app_pictured_lets_users_easily_share_and-a-52_1435310256217.jpg" alt="Avatar">
-						<div class="container">
-						<h4><b>Find Loved Ones</b></h4> 
-						<p>
-							We provide the ability to track your loved ones location and safety, live, without
-							fear of overloading the cell networks.
-						</p>
-						</div>
-					</div>
-		</div>
+		<br><br><br><br><br><br>
+		
+		<app-card cardTitle1="Police Assist" 
+		cardImage1="http://kingstonjournal.com/wp-content/uploads/2013/01/swat-468x312.png"
+		cardText1="If the student is safe, our application provides the ability for students to 
+		report where an active shooter is. This information is then passed onto police to help 
+		them locate the suspects as quickly as possible."
+		cardTitle2="Find Loved Ones"
+		cardImage2="http://i.dailymail.co.uk/i/pix/2015/06/26/10/29FDE98600000578-3140187-Apple_s_Find_My_Friends_app_pictured_lets_users_easily_share_and-a-52_1435310256217.jpg"
+		cardText2="We provide the ability to track your loved ones location and safety, live, without fear of overloading the cell networks."
+		></app-card>
 
-		<div class="card-container">
-				<div class="card">
-						<img src="https://d85wutc1n854v.cloudfront.net/live/products/icons/WB03GB113.jpg?v=1.6.0" alt="Avatar">
-						<div class="container">
-						<h4><b>Admin Dashboard</b></h4> 
-						<p>
-								Our advanced administrative dashboard provides police and school administrators up-to-the-second reports and status of the emergency. Live tracking of all students and suspects on a map.
-						</p>
-						</div>
-					</div>
-				
-				
-					<div class="card">
-						<img src="https://media.giphy.com/media/88Cw9Vce6IzE4/giphy.gif" alt="Avatar">
-						<div class="container">
-						<h4><b>Speed and Reliability</b></h4> 
-						<p>
-								During an emergency, our website goes into low-bandwidth, high-performance mode, ensuring that cell and WiFi networks remain online and not overloaded. Our servers can handle hundreds of thousands of requests per second.
-						</p>
-						</div>
-					</div>
-		</div>
-		
-		
-		
+		<app-card cardTitle1="Admin Dashboard"
+		cardImage1="https://d85wutc1n854v.cloudfront.net/live/products/icons/WB03GB113.jpg?v=1.6.0"
+		cardText1="Our advanced administrative dashboard provides police and school administrators 
+		up-to-the-second reports and status of the emergency. Live tracking of all students and suspects on a map."
+		cardTitle2="Speed and Reliability"
+		cardImage2="https://media.giphy.com/media/88Cw9Vce6IzE4/giphy.gif"
+		cardText2="During an emergency, our website goes into low-bandwidth, high-performance mode, ensuring that cell 
+		and WiFi networks remain online and not overloaded. Our servers can handle hundreds of thousands of requests per second."
+		></app-card>
 
 
 </div>
