--- a/src/app/components/report-type/report-type.component.html
+++ b/src/app/components/report-type/report-type.component.html
@@ -1,3 +1,5 @@
-<p>
-  report-type works!
-</p>
+<app-header></app-header>
+
+<app-gridlist [listItems] = "reportTypes"></app-gridlist>
+
+<app-footer></app-footer>
