--- a/src/app/designcomponents/optionsbuttons/optionsbuttons.component.css
+++ b/src/app/designcomponents/optionsbuttons/optionsbuttons.component.css
@@ -1,12 +1,15 @@
 .optionsbuttons {
-	font-size: 24px;
-	color:red;
-	background-color: aqua;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 15px;
+	font-weight: 400;
+	color:white;
+	background-color:#2196F3;
 	width: 10%;
-	line-height: 135px;
-	padding: 10px;
+	line-height: 30px;
+	padding: 8px 16px;
 	margin: 10px;
 	position: relative;
 	float: left;
 	text-align: center;
+	cursor: pointer; 
 }
