--- a/src/app/designcomponents/optionsbuttons/optionsbuttons.component.html
+++ b/src/app/designcomponents/optionsbuttons/optionsbuttons.component.html
@@ -1,3 +1,5 @@
-<div class="optionsbuttons">
-  {{title}}
+<div class = "buttonHolder">
+  <div class="optionsbuttons">
+    {{title}}
+  </div>
 </div>
