continue to fix the options components and updated some info

--- a/src/app/components/flood/flood.component.html
+++ b/src/app/components/flood/flood.component.html
@@ -13,8 +13,10 @@
 	<app-bigbox title="Gather Information Before Calling 911" color="#7380C9"></app-bigbox>
 	<div>
 		<ul>
-			<li>Recheck where this connects to</li>
+			<li>location page redirect</li>
 		</ul>
 	</div>>
 </div>
 
+<!-- this will need an additional page for a form for emailing campus service-->
+<!-- will need yes/no for location-->
