--- a/src/app/components/gta/gta.component.html
+++ b/src/app/components/gta/gta.component.html
@@ -13,9 +13,11 @@
 	<app-bigbox title="Gather Information Before Calling 911" color="#7380C9"></app-bigbox>
 	<div>
 		<ul>
+			<li>License Plate #</li>
 			<li>Drivers License #</li>
-			<li>Vehicle License Plate #</li>
+			<li>Location #</li>
 			<li>VIN (Vehicle Identification Number)</li>
+			<li>Last time car was seen</li>
 		</ul>
 	</div>>
 </div>
