--- a/src/app/components/stalking/stalking.component.html
+++ b/src/app/components/stalking/stalking.component.html
@@ -14,6 +14,10 @@
 	<div>
 		<ul>
 			<li>Name of the person if known</li>
+			<li>Description of person</li>
+			<li>Relation to you if any</li>
+			<!-- need to add a slider maybe embedded or in the app comp-->
+			<li>Danger will need slider for this</li>
 		</ul>
 	</div>>
 </div>
