New administration menu

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,5 @@
-<p>
-  about works!
-</p>
+<app-header></app-header>
+
+<img src = "http://thyblackman.com/wp-content/uploads/2013/08/Im-Bout-It.jpg"/>
+
+<app-footer></app-footer>
