--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,3 +1,5 @@
-<p>
-  contact works!
-</p>
+<app-header></app-header>
+
+<img src = "http://www.clotureclub.com/wp-content/uploads/2013/05/call-me.jpg"/>
+
+<app-footer></app-footer>
