updated buttons on rape, report, shooting and stalking

--- a/src/app/components/injury/injury.component.html
+++ b/src/app/components/injury/injury.component.html
@@ -1,3 +1,5 @@
 <p>
-  injury works!
+  injury would be better on old esns, to report if a shooting has occurred
+  it is too complicated to do injury for all items 
+  especially for legal purposes 
 </p>
