--- a/src/app/components/stalking/stalking.component.html
+++ b/src/app/components/stalking/stalking.component.html
@@ -5,6 +5,8 @@
 	<app-optionsbuttons title="No" (click)="gotoStep(3)"></app-optionsbuttons>
 </div>
 
+<!-- this will be based on campus and off campus-->
+<!-- if on campus give campus po #-->
 <div *ngIf="getStep()==2">
 	<app-bigbox title="Call 911 Immediately" color="red"></app-bigbox>
 </div>
