--- a/src/app/components/shooting/shooting.component.html
+++ b/src/app/components/shooting/shooting.component.html
@@ -1,3 +1,43 @@
-<p>
-  shooting needs to be updated!
-</p>
+
+<div *ngIf="getStep()==1">
+	<app-bigbox title="Did this just occur?" color="#7380C9"></app-bigbox>
+	<app-optionsbuttons title="Yes" (click)="gotoStep(2)"></app-optionsbuttons>
+	<app-optionsbuttons title="No" (click)="gotoStep(3)"></app-optionsbuttons>
+</div>
+
+<div *ngIf="getStep()==2">
+	<app-bigbox title="Are you safe?" color="red"></app-bigbox>
+  <!-- will need an additional step figure out how-->
+  <app-optionsbuttons title = "Yes" (click)= "gotoStep(4)"></app-optionsbuttons>
+  <app-optionsbuttons title = "No" (click) = "gotoStep(5)"></app-optionsbuttons>
+	<!-- need yes and no option, look at drive-->
+</div>
+
+<div *ngIf="getStep()==3">
+	<app-bigbox title="Gather Information Before Calling 911" color="#7380C9"></app-bigbox>
+	<div>
+		<ul>
+			<li>Need to link back to the repot page</li>
+		</ul>
+	</div>>
+</div>
+
+<div *ngIf="getStep()==4">
+	<div>
+		<ul>
+      <li>Not sure but in these steps I think we need to link to old</li>
+		</ul>
+	</div>>
+</div>
+
+<!-- will need to be based on time to know hours of buildings open-->
+<div *ngIf="getStep()==5">
+	<app-geolocate></app-geolocate>
+	<div>
+		<ul>
+      <li>Not sure but in these steps I think we need to link to old</li>
+		</ul>
+	</div>>
+</div>
+
+
