--- a/src/app/designcomponents/dashboard/infobox/infobox.component.css
+++ b/src/app/designcomponents/dashboard/infobox/infobox.component.css
@@ -5,12 +5,18 @@
   color: white;
   justify-content: center;
   align-items: center;
+
 }
 
 .flex-container > div {
-  padding: 20px;
-  flex: 0 1 200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 10px;
+  flex: 0 1 270px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  height: 170px;
 }
 
 .flex-container > div > div {
@@ -20,15 +26,22 @@
 }
 
 .icon {
-  max-width: 140px;
+  max-width: 120px;
+  max-height: 120px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .infobox-header {
   font-size: 16px;
+  float: left;
+  text-align: center;
 }
 
 .infobox-desc {
   font-size: 70px;
+  clear: both;
+  text-align: center;
 }
 
 #parent {
@@ -41,8 +54,4 @@
   float: left;
   margin-right: 5px;
   text-align: center;
-}
-
-.blue {
-    background: DodgerBlue;
 }
