--- a/src/app/designcomponents/dashboard/infobox/infobox.component.html
+++ b/src/app/designcomponents/dashboard/infobox/infobox.component.html
@@ -1,17 +1,102 @@
 <div class="flex-container">
-    <div class="blue">
+    <div style="background-color: SlateBlue;">
         <div id="parent">
             <div class="child">
-                    <img src="https://www.esns.life/images/protect.svg" class="icon"><br>
+                <img src="https://www.esns.life/images/protect.svg" class="icon">
+                <br>
             </div>
             <div class="child">
-                    <font class="infobox-header">
-                            Students
-                            <br> Protected
-                        </font>
-                        <font class="infobox-desc">
-                            {{totalStudents}}
-                        </font>
+                    <div class="infobox-header">
+                        Students<br>
+                        Protected
+                    </div>
+                    <div class="infobox-desc">
+                        {{totalStudents}}
+                    </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div style="background-color: limegreen;">
+        <div id="parent">
+            <div class="child">
+                <img src="https://www.esns.life/images/university.svg" class="icon">
+                <br>
+            </div>
+            <div class="child">
+                <div class="child">
+                    <div class="infobox-header">
+                        Schools
+                        <br> Monitored
+                    </div>
+                    <div class="infobox-desc">
+                        {{totalSchools}}
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div style="background-color: crimson ;">
+        <div id="parent">
+            <div class="child">
+                <img src="https://www.esns.life/images/gun.svg" class="icon">
+                <br>
+            </div>
+            <div class="child">
+                <div class="infobox-header">
+                    2018 Mass
+                    <br> Shootings
+                    <br>
+                </div>
+                <div class="infobox-desc">
+                    4
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div style="background-color: black ;">
+        <div id="parent">
+            <div class="child">
+                <img src="https://www.esns.life/images/tombstone.svg" class="icon">
+                <br>
+            </div>
+            <div class="child">
+                <div class="infobox-header">
+                    2018 Mass
+                    <br> Shootings Deaths
+                    <br>
+                </div>
+                <div class="infobox-desc">
+                    25
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div style="background-color: dodgerblue ;">
+        <div id="parent">
+            <div class="child">
+                <img src="https://www.esns.life/images/injury.svg" class="icon">
+                <br>
+            </div>
+            <div class="child">
+                <div class="infobox-header">
+                    2018 Injuries
+                    <br>
+                </div>
+                <div class="infobox-desc">
+                    34
+                </div>
+
             </div>
         </div>
     </div>
