Admin dashboard v1 done

--- a/src/app/components/school/school.component.html
+++ b/src/app/components/school/school.component.html
@@ -1,5 +1,9 @@
 <app-header></app-header>
 
-Select a school to administrate here
+<div style="text-align: center; width: 100%">
+    <h3>Current School:</h3>
+    <h1>Fresno State</h1>
+</div>
+
 
 <app-footer></app-footer>
