--- a/src/app/designcomponents/dashboard/infobox/infobox.component.html
+++ b/src/app/designcomponents/dashboard/infobox/infobox.component.html
@@ -53,7 +53,26 @@
                     <br>
                 </div>
                 <div class="infobox-desc">
-                    4
+                    {{massShootings}}
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div style="background-color: Peru  ;">
+        <div id="parent">
+            <div class="child">
+                <img src="https://www.esns.life/images/warning.svg" class="icon">
+                <br>
+            </div>
+            <div class="child">
+                <div class="infobox-header">
+                    Threats<br>
+                    Per Day
+                </div>
+                <div class="infobox-desc">
+                    {{threatsPerDay}}
                 </div>
 
             </div>
@@ -74,7 +93,7 @@
                     <br>
                 </div>
                 <div class="infobox-desc">
-                    25
+                    {{massDeaths}}
                 </div>
 
             </div>
@@ -94,7 +113,7 @@
                     <br>
                 </div>
                 <div class="infobox-desc">
-                    34
+                    {{injuries}}
                 </div>
 
             </div>
