--- a/src/app/components/findstudent/findstudent.component.html
+++ b/src/app/components/findstudent/findstudent.component.html
@@ -1,3 +1,28 @@
 <app-header></app-header>
-Find the status of a student here (admin version)
+
+
+
+
+<div class="flex-container">
+		<div style="background-color: slateblue;">
+			<div style="align-content: center; text-align: center; width: 100%">
+				<form class="example-form">
+					<mat-form-field class="example-full-width">
+						<input type="text" placeholder="Find Student..." aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" (selectItem)="selectedItem($event)">
+						<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"
+						mat-input-name="autocompleteField" mat-select-on-match required
+						[displayWith]="displayFn">
+							<mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+								{{ option.firstName }} {{ option.lastName }}
+							</mat-option>
+						</mat-autocomplete>
+					</mat-form-field>
+				</form>
+			</div>
+		</div>
+	</div>
+
+
+
+
 <app-footer></app-footer>
