Find student interface is complete-ish.

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
 
+<div class="flex-container">
+		<app-school></app-school>
+		<app-findstudent></app-findstudent>
+</div>
+
 
 <app-infobox></app-infobox>
 
