--- a/src/app/components/findstudent/findstudent.component.html
+++ b/src/app/components/findstudent/findstudent.component.html
@@ -1,28 +1,33 @@
-<app-header></app-header>
-
-
-
-
-<div class="flex-container">
-		<div style="background-color: slateblue;">
-			<div style="align-content: center; text-align: center; width: 100%">
-				<form class="example-form">
-					<mat-form-field class="example-full-width">
-						<input type="text" placeholder="Find Student..." aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" (selectItem)="selectedItem($event)">
-						<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"
-						mat-input-name="autocompleteField" mat-select-on-match required
-						[displayWith]="displayFn">
-							<mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-								{{ option.firstName }} {{ option.lastName }}
-							</mat-option>
-						</mat-autocomplete>
-					</mat-form-field>
-				</form>
+<div class="second" style="background-color: DarkBlue ;" *ngIf="studentSelected">
+	<div class="third" id="parent">
+		<div class="child">
+			<div class="infobox-desc">
+				{{getStudentName()}}
+			</div>
+			<div class="selectNew" (click)="showStudentSearch()">
+				Change Student
 			</div>
 		</div>
 	</div>
+</div>
 
 
+<div class="second" style="background-color: DarkBlue ;" *ngIf="!studentSelected">
+	<div class="third" id="parent">
+		<div class="child">
+			<form class="example-form">
+				<mat-form-field>
+					<input type="text" placeholder="Find Student..." aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto"
+					 (selectItem)="selectedItem($event)">
+					<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" mat-input-name="autocompleteField" mat-select-on-match required
+					 [displayWith]="displayFn">
+						<mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+							{{ option.firstName }} {{ option.lastName }}
+						</mat-option>
+					</mat-autocomplete>
+				</mat-form-field>
+			</form>
+		</div>
 
-
-<app-footer></app-footer>
+	</div>
+</div>
