updated contact page, needs css and backend connection

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,5 +1,44 @@
-<app-header></app-header>
+<div class="row custom-row">
+        <div class= "col-sm-5 custom-container jumbotron" align = "center">
+             
+          <form class="form-horizontal">
+              <fieldset>
+                <legend>Contact Us</legend>
+               
+                  <!--- Email Block -->
+                  <div class="form-group">
+                    <label for="inputEmail">Name</label>
+                    <input type="text"
+                      id="inputEmail"
+                      placeholder="Email">
+                  </div>
+                  <!--- Password Block -->
+                  <div class="form-group">
+                    <label for="inputSchool">School Name</label>
+                    <input type="text">
+                  </div>
+           
 
-<img src = "http://www.clotureclub.com/wp-content/uploads/2013/05/call-me.jpg"/>
+                  <!-- Email Block-->
+                  <div class="form-group">
+                    <label for="inputEmail" >E-mail</label>
+                    <input type="email">
+                  </div>
+                   
 
-<app-footer></app-footer>
+                  <!-- Contact Box Block-->
+                  <div class = "form-group">
+                      <label for = "comment"></label>
+                      <textarea id="comment" cols = "30" rows ="10"></textarea>
+                  </div>
+
+                
+                 <!--- Buttons Block -->
+                  <div class="form-group">
+                      <button type="reset" class="btn btn-default">Cancel</button>
+                      <button type="submit" class="btn btn-primary">Submit</button>
+                  </div>
+              </fieldset>
+          </form>
+        </div>
+      </div>
