Fixes for student search and initial messaging apis

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -5,6 +5,10 @@
 		<app-findstudent></app-findstudent>
 </div>
 
+<div class="flex-container">
+		<app-messaging></app-messaging>
+</div>
+
 
 <app-infobox></app-infobox>
 
