--- a/src/app/components/messaging/messaging.component.html
+++ b/src/app/components/messaging/messaging.component.html
@@ -1,5 +1,17 @@
-<app-header></app-header>
+<div class="second" style="background-color: DarkBlue ;" *ngIf="studentSelected()">
+	<div class="third" id="parent">
+		<div class="child">
+			<img src="https://www.esns.life/images/email.svg" style="width: 150px">
+		</div>
+	</div>
+</div>
 
-Send Messages to indivudual students or entire schools here
-
-<app-footer></app-footer>
+<div class="second" style="background-color: DarkBlue ;" *ngIf="studentSelected()">
+	<div class="third" id="parent">
+		<div class="child">
+			<div class="child">
+				<img src="https://www.esns.life/images/text.svg" style="width: 150px">
+			</div>
+		</div>
+	</div>
+</div>
