--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,6 +8,7 @@
 	justify-content: center;
 	align-items: center;
 	color: white;
+	flex-direction: row;
   }
 
   .second, .flex-container > div {
@@ -63,4 +64,8 @@
 	float: left;
 	margin-right: 5px;
 	text-align: center;
-  }
+	}
+
+	.mat-input-element {
+	color: white;
+}
